# SUSTech-Intelligent-Robot

./: .gitignore  LICENSE  readme.md
lab/: create_package.sh  create_workspace.sh
lab/catkin_ws/src/beginner_tutorials/: CMakeLists.txt  package.xml
lab/catkin_ws/src/beginner_tutorials/msg/: Student.msg
lab/catkin_ws/src/beginner_tutorials/src/publisher_subscriber/: publisher.cpp  subscriber.cpp
lab/catkin_ws/src/beginner_tutorials/src/server_client/: client.cpp  server.cpp
lab/catkin_ws/src/beginner_tutorials/src/student_srvcli/: student_cli.cpp  student_srv.cpp
lab/catkin_ws/src/beginner_tutorials/src/talker_listener/: listener.cpp  talker.cpp
lab/catkin_ws/src/beginner_tutorials/srv/: StudentScore.srv
lab/catkin_ws/src/lab2_task/: CMakeLists.txt  package.xml
lab/catkin_ws/src/lab2_task/include/lab2_task/: ros_utils.hpp
lab/catkin_ws/src/lab2_task/launch/: lab2_task.launch
lab/catkin_ws/src/lab2_task/src/: turtle_command_client.cpp  turtle_command_server.cpp  turtle_create_client.cpp
lab/catkin_ws/src/lab2_task/srv/: CommandTurtle.srv  GenerateTurtle.srv
lab/catkin_ws/src/learning_launch/: CMakeLists.txt  package.xml
lab/catkin_ws/src/learning_launch/config/: param.yaml
lab/catkin_ws/src/learning_launch/launch/: turtlesim_parameter_config.launch  turtlesim_remap_include.launch
lab/catkin_ws/src/learning_launch/scripts/: pose_subscriber.py  velocity_publisher.py
lab/catkin_ws/src/learning_parameter/: CMakeLists.txt  package.xml
lab/catkin_ws/src/learning_parameter/src/: param_config.cpp
lab/catkin_ws/src/learning_tf/: CMakeLists.txt  package.xml
lab/catkin_ws/src/learning_tf/include/learning_tf/: ros_utils.hpp
lab/catkin_ws/src/learning_tf/launch/: learning_tf.launch  robot_tf.launch
lab/catkin_ws/src/learning_tf/src/: broadcaster.cpp  listener.cpp  robot_tf_broadcaster.cpp  robot_tf_listener.cpp
